# cothink

./: .env.example  .gitignore  README.md  cothink-serve.spec  pyproject.toml
.github/workflows/: build-extension.yml  build-sidecar.yml
extension/: README.md  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts  server.ts  sessionsClient.ts  sseClient.ts
extension/src/views/: buildPanel.ts  chatPanel.ts  workbenchPanel.ts
extension/themes/: cothink-dark.json  cothink-light.json
src/cothink/: chat.py  cli.py  edges.py  graph.py  image_handler.py  learnings_enforcer.py  memory.py  nodes.py  project_state.py  prompts.py  server.py  sessions.py  state.py
templates/: dogfood_log_template.md
tui/: go.mod  go.sum  health.go  model.go  program.go  sse.go  theme.go  update.go  view.go
tui/cmd/cothink/: main.go
