[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cothink"
version = "0.0.1"
description = "Dual-brain orchestrator: Claude (actor) + Gemini (navigator) on LangGraph with a 5-node integrity pipeline"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "claude-agent-sdk>=0.1.68",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "instructor>=1.0.0",
    "python-dotenv>=1.0.0",
    "filelock>=3.12.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.0",
    "pillow>=11.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5.0", "mypy>=1.10"]
build = ["pyinstaller>=6.10.0"]

[project.scripts]
cothink = "cothink.cli:main"
cothink-serve = "cothink.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
